remove some information from the client table and fix a css bug that caused the table to be very wide on firefox

--- a/client/src/styles/Offenders.css
+++ b/client/src/styles/Offenders.css
@@ -1,6 +1,5 @@
 .Offenders {
   background: linear-gradient(to right, lightblue, lightgreen);
-
   padding: 2px;
   border-radius: 1em;
   margin: 15px;
@@ -13,6 +12,7 @@
 }
 
 table {
+  width: 100%;
   margin: 0;
   place-items: center;
   background: #222;
